// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load data thread from Email Table: should load threads from DB with the correct shape: inbox 1`] = `
Array [
  Object {
    "allLabels": "1,3",
    "boundary": null,
    "content": "<p>RE: Hello there</p>",
    "date": "2018-06-15 08:23:19.120",
    "emailIds": "3,4",
    "fileTokens": "tokenC",
    "fromAddress": "user@criptext.com",
    "fromContactName": "User A <usera@criptext.com>,user@criptext.com",
    "id": 4,
    "isMuted": 0,
    "key": "keyD",
    "matchedContacts": "from",
    "maxDate": "2018-06-15 08:23:19.120",
    "messageId": "messageIdD",
    "preview": "RE: Hello there",
    "recipientContactIds": "2,1",
    "replyTo": null,
    "s3Key": "s3KeyD",
    "secure": 1,
    "status": 0,
    "subject": "Greetings",
    "threadId": "threadC",
    "trashDate": null,
    "uniqueId": "threadC",
    "unread": 1,
    "unsendDate": "2018-06-14 08:23:20.000",
  },
]
`;

exports[`Load data thread from Email Table: should load threads from DB with the correct shape: sent 1`] = `
Array [
  Object {
    "allLabels": "1,3",
    "boundary": null,
    "content": "<p>RE: Hello there</p>",
    "date": "2018-06-15 08:23:19.120",
    "emailIds": "3,4",
    "fileTokens": "tokenC",
    "fromAddress": "user@criptext.com",
    "fromContactName": "User A <usera@criptext.com>,user@criptext.com",
    "id": 4,
    "isMuted": 0,
    "key": "keyD",
    "matchedContacts": "from",
    "maxDate": "2018-06-15 08:23:19.120",
    "messageId": "messageIdD",
    "preview": "RE: Hello there",
    "recipientContactIds": "2,1",
    "replyTo": null,
    "s3Key": "s3KeyD",
    "secure": 1,
    "status": 0,
    "subject": "Greetings",
    "threadId": "threadC",
    "trashDate": null,
    "uniqueId": "threadC",
    "unread": 1,
    "unsendDate": "2018-06-14 08:23:20.000",
  },
  Object {
    "allLabels": "3",
    "boundary": null,
    "content": "<p>Hello there</p>",
    "date": "2013-10-07 08:23:19.120",
    "emailIds": "2",
    "fileTokens": null,
    "fromAddress": "User me <user@criptext.com>",
    "fromContactName": "User me <user@criptext.com>",
    "id": 2,
    "isMuted": 1,
    "key": "keyB",
    "matchedContacts": "from",
    "maxDate": "2013-10-07 08:23:19.120",
    "messageId": "messageIdB",
    "preview": "Hello there",
    "recipientContactIds": "1",
    "replyTo": null,
    "s3Key": "s3KeyB",
    "secure": 1,
    "status": 6,
    "subject": "Greetings",
    "threadId": "threadB",
    "trashDate": null,
    "uniqueId": "threadB",
    "unread": 1,
    "unsendDate": "2018-06-14 08:23:20.000",
  },
]
`;

exports[`Store data email to Email Table: should insert email to database 1`] = `
Array [
  Object {
    "boundary": null,
    "content": "<p>Hello there</p>",
    "date": "2018-06-14 08:23:19.120",
    "fromAddress": "From Contact <from@criptext.com>",
    "id": 9,
    "isMuted": 0,
    "key": "keyId",
    "messageId": "messageId",
    "preview": "Hello there",
    "replyTo": null,
    "s3Key": "s3KeyId",
    "secure": 1,
    "status": 0,
    "subject": "Greetings",
    "threadId": "threadId",
    "trashDate": null,
    "unread": 1,
    "unsendDate": "2018-06-14 08:23:20.000",
  },
]
`;
